src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 608 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
