src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
