src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 607 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 607 × 688, bounds: 1239 × 688, states: []
size: 607 × 688, bounds: 1239 × 688, states: [Activated]
