src/tests/snapshots/niri__tests__window_opening__check_target_size@dhU-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "default window height: U\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
