src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1000 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1000 × 680, bounds: 1240 × 680, states: []
size: 1000 × 680, bounds: 1240 × 680, states: [Activated]
